Add some lame ui

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -9,11 +9,24 @@
   </head>
   <body>
     <header>
+      <button type="button" id="select-winners-button">Take random winners!</button>
+      <ul id="winners-list">
+      </ul>
     </header>
     <main>
-      John Doe
+      <ul id="members-list">
+        <li class="members-list-item">
+          <article>
+            <form method="post" id="add-member-form">
+              <input type="text" name="name" class="input" size="24" placeholder="Name" required>
+              <input type="submit" value="Save">
+            </form>
+          </article>
+        </li>
+      </ul>
     </main>
     <footer>
+      kill me please
     </footer>
   </body>
 </html>
