Add template for members list item to be used from JS

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -28,5 +28,16 @@
     <footer>
       kill me please
     </footer>
+
+    <template id="members-list-item-template">
+      <li class="members-list-item">
+          <article>
+            <button type="button" class="delete-member">X</button>
+            <br>
+            <h2 class="member-name"></h2>
+          </article>
+        </li>
+    </template>
+
   </body>
 </html>
